# Mirage

./: .gitignore  README.md  app.py  build.sh  build_nuitka.sh  config.py  image_library.py  language.py  mirage_app.py  pyproject.toml  settings_dialog.py  uninstall-mirage.sh  uninstall_mirage.sh  wallpaper_engine.py
app_core/: __init__.py  app.py  config.py  gtk_runtime.py  image_library.py  language.py  mirage_app.py  random_image_api.py  settings_dialog.py  settings_store.py  theme.css  wallpaper_engine.py
docs/: CODE_ANALYSIS_EN.md  CODE_ANALYSIS_RU.md
mirage/: README.md  requirements.txt
mirage/scripts/: build_nuitka.sh  uninstall_mirage.sh
mirage/src/: config.py
